# de-gcp-tlc-pipeline

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
config/: dataset.yml  runtime.yml
scripts/: data_quality_checks.py  download_raw_local.py  load_to_bigquery.py  preview_sources.py  run_pipeline.py  transform_bq.py  upload_gcs.py
src/de_pipeline/common/: logging.py
src/de_pipeline/ingestion/: downloader.py  source.py
tests/: test_downloader.py  test_source_urls.py  test_transformations.py
